fix submit picture button z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,7 @@
   position:fixed;
   border-bottom: 2px solid #520F0F;
   top:0;
+  z-index: 3;
 }
 
 #footer{
